fix: issue with overflow if long name - adjusted color values to be more easy on the eye

--- a/style/contacts/contact_responsive.css
+++ b/style/contacts/contact_responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1305px) {
+@media (max-width: 1455px) {
     .contact-display {
         margin-left: 25px;
         margin-top: 110px;
@@ -25,6 +25,7 @@
         width: 100px;
         height: 100px;
     }
+
 }
 
 @media (min-width: 1150px) {
